--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -15,6 +15,7 @@ collections:
       - Active Health.md
       - Active Parents.md
       - CoachSG.md
+      - Singapore Sports Institute/Science & Technology.md
       - Singapore Sports Institute/Sport Medicine.md
       - Singapore Sports Institute/.keep
       - Singapore Sports Institute/Introduction.md
