--- a/_singapore-sports-institute/collection.yml
+++ b/_singapore-sports-institute/collection.yml
@@ -4,6 +4,7 @@ collections:
     order:
       - High Performance Sports/.keep
       - High Performance Sports/High Performance Planning.md
+      - Athlete Life/Team Singapore Card.md
       - Athlete Life/spexBusiness Partners.md
       - Athlete Life/spexBusiness.md
       - Athlete Life/Athletes Stories.md
