--- a/_singapore-sports-institute/collection.yml
+++ b/_singapore-sports-institute/collection.yml
@@ -4,6 +4,7 @@ collections:
     order:
       - High Performance Sports/.keep
       - High Performance Sports/High Performance Planning.md
+      - Athlete Life/spexBusiness Network Partners.md
       - Athlete Life/spexEntrepreneurship.md
       - Athlete Life/.keep
       - Athlete Life/Athlete Life Coaching.md
