--- a/_singapore-sports-institute/collection.yml
+++ b/_singapore-sports-institute/collection.yml
@@ -16,5 +16,6 @@ collections:
       - Sport Science/Sport Psychology.md
       - Sport Science/Strength & Conditioning.md
       - Sport Science/Major Games Preparation.md
+      - Science & Technology/SSI Annual Symposium 2014.md
       - Science & Technology/SSI Annual Symposium 2018.md
       - Science & Technology/.keep
