--- a/_singapore-sports-institute/collection.yml
+++ b/_singapore-sports-institute/collection.yml
@@ -16,6 +16,8 @@ collections:
       - Sport Science/Sport Psychology.md
       - Sport Science/Strength & Conditioning.md
       - Sport Science/Major Games Preparation.md
+      - Science & Technology/SSI Science Technology & Innovation Advisory
+        Board.md
       - Science & Technology/SSI Institutional Review Board.md
       - Science & Technology/SSI Annual Symposium 2013.md
       - Science & Technology/SSI Annual Symposium 2014.md
