--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Academy and Clubs.md
       - Anti Doping Singapore/.keep
-      - Anti Doping Singapore/About.md
+      - Anti Doping Singapore/About Us.md
       - Anti Doping Singapore/Testing.md
       - Anti Doping Singapore/Substances.md
       - Anti Doping Singapore/Anti Doping Rule Violations.md
