--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Academy and Clubs.md
+      - Anti Doping Singapore/Education.md
       - Anti Doping Singapore/.keep
       - Anti Doping Singapore/About Us.md
       - Anti Doping Singapore/Testing.md
