--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Academy and Clubs.md
+      - Anti Doping Singapore/Therapeutic Use Exemption (TUE) & Substances.md
       - Anti Doping Singapore/Anti Doping Rule Violation (ADRV).md
       - Anti Doping Singapore/Testing Pool Athletes.md
       - Anti Doping Singapore/Education.md
