--- a/_support/collection.yml
+++ b/_support/collection.yml
@@ -2,7 +2,7 @@ collections:
   support:
     output: true
     order:
-      - Covid 19/Covid19.md
+      - Covid 19/Covid19 Support.md
       - Covid 19/.keep
       - ActiveSG Programme Partnership/.keep
       - ActiveSG Programme Partnership/NROC Sports.md
