--- a/_support/collection.yml
+++ b/_support/collection.yml
@@ -2,6 +2,7 @@ collections:
   support:
     output: true
     order:
+      - Covid 19/Home based Learning Toolkit for Coaches.md
       - Covid 19/For NROC SwimSafer and Life Saving Coaches.md
       - Covid 19/Covid19 Support.md
       - Covid 19/.keep
