--- a/_coaches-corner/collection.yml
+++ b/_coaches-corner/collection.yml
@@ -2,6 +2,7 @@ collections:
   coaches-corner:
     output: true
     order:
+      - National Registry of Coaches/.keep
       - Singapore Coach Excellence/SG Coach Level 1 Theory Programme.md
       - Singapore Coach Excellence/Foundational Intermediate Sports Science
         Course Waivers.md
