--- a/_support/collection.yml
+++ b/_support/collection.yml
@@ -2,7 +2,7 @@ collections:
   support:
     output: true
     order:
-      - Introduction.md
+      - Building up Singapore's coaches and athletes.md
       - ActiveSG Programme Partnership/.keep
       - ActiveSG Programme Partnership/NROC Sports.md
       - ActiveSG Programme Partnership/Other Sports.md
