--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,7 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
-      - Introduction.md
+      - Overview.md
       - Academy and Clubs.md
       - Anti Doping Singapore/.keep
       - Anti Doping Singapore/About Us.md
