--- a/_support/collection.yml
+++ b/_support/collection.yml
@@ -17,7 +17,7 @@ collections:
       - Coaches' Corner/Funding.md
       - Coaches' Corner/Contact Us.md
       - Facilities.md
-      - FMS trainer at Nurture Kids.md
+      - FMS Trainer at Nurture Kids.md
       - Sport Data Exchange Singapore.md
       - Support for Sport Businesses (Grants).md
       - Sports Participation in Singapore.md
