--- a/_support/collection.yml
+++ b/_support/collection.yml
@@ -22,7 +22,7 @@ collections:
       - Support for Sport Businesses (Grants).md
       - Sports Participation in Singapore.md
       - SportSG ED.md
-      - Covid 19/.keep
-      - Covid 19/Covid19 Support.md
-      - Covid 19/For NROC SwimSafer and Life Saving Coaches.md
-      - Covid 19/Home based Learning Toolkit for Coaches.md
+      - COVID 19/.keep
+      - COVID 19/Covid19 Support.md
+      - COVID 19/For NROC SwimSafer and Life Saving Coaches.md
+      - COVID 19/Home based Learning Toolkit for Coaches.md
