--- a/_support/collection.yml
+++ b/_support/collection.yml
@@ -2,6 +2,7 @@ collections:
   support:
     output: true
     order:
+      - National Registry of Coaches/.keep
       - Overview.md
       - ActiveSG Programme Partnership/.keep
       - ActiveSG Programme Partnership/NROC Sports.md
