--- a/_support/collection.yml
+++ b/_support/collection.yml
@@ -2,6 +2,7 @@ collections:
   support:
     output: true
     order:
+      - National Registry of Coaches/NROC Handbook.md
       - National Registry of Coaches/Usage of Sports Hub Library.md
       - National Registry of Coaches/.keep
       - Overview.md
