--- a/_sports-education/collection.yml
+++ b/_sports-education/collection.yml
@@ -38,5 +38,5 @@ collections:
       - Sports Safety/Sports Safety & Health Check.md
       - Sports Safety/Sports Safe U Guide.md
       - Value & Principles in Sport.md
-      - Sports Education Programmes.md
+      - Sports Education Programme.md
       - National Standards for Youth Sports.md
