--- a/_sports-education/collection.yml
+++ b/_sports-education/collection.yml
@@ -31,7 +31,7 @@ collections:
       - Sports Leadership/Resources.md
       - Sports Safety/.keep
       - Sports Safety/Introduction.md
-      - Sports Safety/Haze management at Sport Singapore.md
+      - Sports Safety/Haze Management at Sport Singapore.md
       - Sports Safety/Pool Water Quality.md
       - Sports Safety/Safety Resources & Useful Links.md
       - Sports Safety/Sports Safety Committee.md
