--- a/_sports-education/collection.yml
+++ b/_sports-education/collection.yml
@@ -24,7 +24,7 @@ collections:
       - Sporting Events/National Fitness Exercise.md
       - Sporting Events/Pesta Sukan.md
       - Sports Leadership/.keep
-      - Sports Leadership/Latest.md
+      - Sports Leadership/Past Works.md
       - Sports Leadership/Game For Life.md
       - Sports Leadership/Partnership with Sports Leadership.md
       - Sports Leadership/Resources.md
